--- a/public/less/style.less
+++ b/public/less/style.less
@@ -8,21 +8,29 @@ body {
   font-family: 'Open Sans', sans-serif;
   font-size: 1.6rem;
   font-weight: 300;
-  background: #333;
-  color: #ccc;
+  background: @white;
+  margin: 0;
+  color: #555;
+  * {
+    box-sizing: padding-box;
+  }
 }
 
-#app {
+.container {
   max-width: 80rem;
-  margin: 20px auto;
+  margin: 0 auto 2rem auto;
+}
+
+#main-container {
+  margin-top: 5rem;
 }
 
 #navbar {
+  background: darken(@navItemBg, 35%);
+  text-align: right;
   a {
     display: inline-block;
-    margin-right: 1.5rem;
-    padding: 1rem 2rem;
-    background: darken(@navItemBg, 35%);
+    padding: 1.5rem 2.5rem;
     color: @white;
     text-decoration: none;
     &:hover {
@@ -34,14 +42,29 @@ body {
   }
 }
 
-
 .wp-page-content {
   margin-bottom: 1rem;
   padding: 2rem;
   border: .3rem solid pink;
 }
 
+.kits-gallery {
+  display: flex;
+  flex-flow: row wrap;
+}
+
+.curr-kit-thumb {
+  background: #CFF09E;
+  flex-basis: calc(~"100%/2 - 1rem");
+  padding: 1.5rem;
+  margin-bottom: 2rem;
+  &:nth-child(2n+1) {
+    margin-right: 2rem;
+  }
+}
+
 #emoji {
   font-size: 2rem;
   text-align: right;
+  margin-top: 5rem;
 }
