--- a/public/less/style.less
+++ b/public/less/style.less
@@ -16,9 +16,24 @@ body {
   }
 }
 
+a {
+  color: @green;
+  font-weight: 500;
+  &:hover {
+    color: darken(@green, 20%);
+  }
+  &.active {
+    color: darken(@green, 20%);
+  }
+}
+
 .container {
   max-width: 80rem;
   margin: 0 auto 2rem auto;
+  * {
+    max-width: 80rem;
+    height: auto;
+  }
 }
 
 #main-container {
@@ -42,10 +57,14 @@ body {
   }
 }
 
-.wp-page-content {
-  margin-bottom: 1rem;
-  padding: 2rem;
-  border: .3rem solid pink;
+.page-type-label {
+  display: inline-block;
+  background: @hotPink;
+  color: @white;
+  font-size: 2rem;
+  text-transform: uppercase;
+  padding: 1.2rem 2rem;
+  border-radius: .4rem;
 }
 
 .kits-gallery {
@@ -54,32 +73,48 @@ body {
 }
 
 .curr-kit-thumb {
-  background: #CFF09E;
+  background: lighten(@green, 20%);
   flex-basis: calc(~"100%/2 - 1rem");
-  padding: 1.5rem;
+  padding: 2rem 3rem;
   margin-bottom: 2rem;
+  border-radius: 3rem 0;
+  color: @bodyTextGrey;
+  text-decoration: none;
   &:nth-child(2n+1) {
     margin-right: 2rem;
+  }
+  &:hover,
+  &:active {
+    background: darken(@green, 20%);
+    color: @white;
+  }
+  h3 {
+    margin-top: 0;
+    margin-bottom: .5rem;
   }
 }
 
 .blog-post-thumb {
-  padding: 2rem 0;
+  margin-bottom: 2rem;
   &:not(:last-child) {
-    border-bottom: .3rem solid @yellow;
+    margin-top: 2rem;
   }
   h3 {
     margin-bottom: .5rem;
-  }
-  .meta {
-    font-size: 1.4rem;
-    color: lighten(@bodyTextGrey, 25%)
   }
   .fa {
     margin-right: .5rem;
     &:not(:first-child) {
       margin-left: 1.5rem;
     }
+  }
+}
+
+.blog-post,
+.blog-post-thumb {
+  .meta {
+    font-size: 1.4rem;
+    color: lighten(@bodyTextGrey, 25%)
   }
 }
 
