--- a/public/less/style.less
+++ b/public/less/style.less
@@ -1,4 +1,5 @@
 @import 'variables';
+@import 'wp-override';
 
 html, body {
   font-size: 62.5%;
@@ -23,6 +24,10 @@ a {
   &:active {
     color: @green;
   }
+}
+
+img {
+  max-width: 100%;
 }
 
 h1 {
@@ -88,6 +93,7 @@ h1 {
 
 .note {
   background: darken(@white, 5%);
+  margin: 1rem 0;
   padding: 1rem 1.5rem;
   color: lighten(@black, 40%);
   font-size: 1.4rem;
@@ -101,7 +107,6 @@ h1 {
   font-size: 2rem;
   text-transform: uppercase;
   padding: 1.2rem 2rem;
-  margin-top: 1rem;
   border-radius: .4rem;
 }
 
